--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "@mantine/prism": "5.10.2",
     "@next/bundle-analyzer": "^13.1.6",
     "@tabler/icons": "^1.107.0",
+    "body-parser": "^1.20.1",
     "cookies-next": "^2.1.1",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
+    "express": "^4.18.2",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
